<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CarryingCat</string>
    <string name="action_settings">Settings</string>
	<string name="action_search">Search</string>
	<string name="action_donate">Donate us!</string>

	<string-array name="home_tabs">
		<item>My Video</item>
		<item>Downloading</item>
	</string-array>

	<string name="donate_content">"If this application is useful for you, and you\'re willing to support us, you could donate us through Alipay.\nOur Alipay account: 316643843\@qq.com\nAlso you can use that QR Code."</string>

	<string name="multivideo_count_title">"Has %s video(s)"</string>

	<string name="operation_delete">Delete video</string>
	<string name="operation_delete_successful">Deleted successfully.</string>
	<string name="operation_share">Share to friends</string>

	<string name="button_next">NEXT</string>
	<string name="button_unable">UNABLE TO CLICK</string>
	<string name="button_finish">FINISH</string>

	<string name="button_start_all">Start all</string>
	<string name="button_pause_all">Pause all</string>
	<string name="button_delete_all">Clean all</string>

	<string name="activity_title_add_task">Add Task</string>

	<string name="title_address">ADDRESS</string>
	<string name="title_url">URL</string>
	<string name="title_bilibili_no">BILIBILI AV NO.</string>
	<string name="title_url_title">VIDEO TITLE</string>
	<string name="title_quality">QUALITY</string>
	<string name="title_size">VIDEO SIZE</string>
	<string name="content_size">%1$s (%2$s)</string>

	<string name="result_hint_wrong_url">You haven\'t entered the correct video url.</string>
	<string name="result_unavailable">UNAVAILABLE</string>
	<string name="result_available">AVAILABLE</string>
	<string name="result_error">ERROR</string>

	<string name="hint_enter_url_error">It seems that the URL you entered is wrong. Check it, plz.</string>

	<string name="hint_finish">Your download task is ready!</string>
	<string name="hint_unsupported_section_download">(We haven\'t supported download section, please not choose section download.)</string>

	<string-array name="spinner_address_type">
		<item>@string/title_url</item>
		<item>@string/title_bilibili_no</item>
	</string-array>

	<string name="quality_choose">Choose quality</string>

	<string name="download_noti_title">Downloading %s....</string>
	<string name="download_ask_for_deleting">Delete %s?</string>
	<string name="download_ask_for_deleting_warning">WARNING: THIS OPERATION CANNOT RECOVER.</string>
	<string name="status_downloading">Downloading</string>
	<string name="status_pause">Paused</string>
	<string name="status_failed">Failed</string>
	<string name="status_succeed">Succeed</string>
	<string name="status_pending">Waiting</string>

	<string name="settings">Settings</string>
	<string name="title_application">Application Settings</string>
	<string name="settings_gui">UI</string>
	<string name="settings_download">Download</string>
	<string name="title_about">About</string>
	<string name="about_sina_weibo">Sina Weibo</string>
	<string name="about_weibo_user_name">"\@某烧饼"</string>
	<string name="about_weibo_address">"http://weibo.com/fython"</string>
	<string name="about_blog">Blog</string>
	<string name="about_blog_address">"http://feng.moe"</string>
	<string name="about_github">Github Project</string>
	<string name="about_github_address">"http://github.com/fython/CarryingCat"</string>
	<string name="title_feature">Features</string>
	<string name="title_force_tint">Enable Tint</string>
	<string name="title_force_tint_desc">The status bar will change its color in CarryingCat.</string>
	<string name="title_force_tint_unsupported">This feature needs Android 4.4, please upgrade your machine.</string>
	<string name="title_force_tint_lollipop">This feature has been instead of Material Theme on Android 5.0</string>
	<string name="title_bilibili">Bilibili</string>
	<string name="title_bilibili_enabled">Enabled Bilibili Provider</string>
	<string name="title_bilibili_enabled_desc">You could watch downloaded videos from Bilibili App.</string>
	<string name="title_bilibili_path">Folder Path</string>
	<string name="title_bilibili_path_unavailable">The path is unavailable. Please enter the correct path.</string>

	<string name="share_receive_title">Get videos by URL</string>

</resources>
