<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
		android:key="application_settings"
		android:title="@string/title_application">

		<Preference android:key="gui" android:title="@string/settings_gui"/>
		<Preference android:key="download" android:title="@string/settings_download"/>

	</PreferenceCategory>

	<PreferenceCategory
		android:key="about"
	    android:title="@string/title_about">

		<Preference android:key="application_info" android:title="@string/app_name"/>
		<Preference android:key="weibo" android:title="@string/about_sina_weibo" android:summary="@string/about_weibo_user_name"/>
		<Preference android:key="blog" android:title="@string/about_blog" android:summary="@string/about_blog_address"/>
		<Preference android:key="github" android:title="@string/about_github" android:summary="@string/about_github_address"/>

	</PreferenceCategory>

</PreferenceScreen>