<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res/cn.fython.carryingcat"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

	<android.support.v7.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/card_view"
		android:layout_margin="3dp"
		android:layout_weight="1"
		app:cardCornerRadius="1dp"
		app:cardElevation="1dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:gravity="center">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:text="@string/hint_finish"
				android:textColor="@color/grey_900"
				android:layout_gravity="center"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:text="@string/hint_unsupported_section_download"
				android:textColor="@color/grey_600"/>

		</LinearLayout>

	</android.support.v7.widget.CardView>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:gravity="right"
		android:layout_marginLeft="3dp"
		android:layout_marginRight="3dp"
	    android:layout_marginBottom="3dp"
		>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="3">
		</LinearLayout>

		<oppa.paperstyle.PaperButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:id="@+id/button"
			app:pw_backgroundColor="@color/deep_purple_500"
			app:pw_borderSize="0"
			app:pw_focusColor="@color/deep_purple_200"
			android:text="@string/button_finish"
			android:layout_marginRight="3dp"/>

	</LinearLayout>

</LinearLayout>